gannotate 0.6 2005-10-28
========================

    * First official release!
    * Why 0.6? Version numbering will follow bazaar-NG's until its API
      stabilizes.
